--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Finalsv13</title>
+  <title>Flash Delivery</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <!-- Favicon -->
+    <link
+      rel="icon"
+      href="/address_delivery_map_tracking_distribution_icon_187242.ico?v=1"
+      type="image/x-icon"
+    />
+  
 </head>
 <body>
   <app-root></app-root>
